# centralized-log-aggregator-tool

./: CMakeLists.txt  LICENSE  README.md
app/: CMakeLists.txt  cli.cpp  main.cpp
docs/: CMakeLists.txt  Doxyfile.in
include/log_aggregator/: log_aggregator.h
include/motor_control_pwm_rpi5/: motor_control_pwm_rpi5.h
src/: CMakeLists.txt  log_aggregator.cpp  motor_control_pwm_rpi5.cpp
tests/: CMakeLists.txt  test_log_aggregator.cpp  test_motor_control_pwm_rpi5.cpp
